k8s/frontend/ui-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      volumes:
        - name: ui-config
          configMap:
            name: frontend-configmap
            items:
              - key: config.json
                path: config.json
      containers:
        - name: frontend-app
          image: "${DOCKERHUB_USERNAME}/burger-frontend:latest"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ui-config
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
              readOnly: true
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 10
